# basic-engine

./: CMakeLists.txt
source/: main.cpp
source/compile/: Shader.h
source/model/: mesh.h  model.h
source/shaders/: cube.fs  cube.vs  framebuffers_screen.fs  light.fs  shader.fs  shader_single_color.fs
